--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,9 +1,9 @@
-name: Build and Push Docker Image
+name: Build and Push Docker images
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - '*'
 
 jobs:
   build-and-push:
@@ -13,15 +13,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
+    - name: Generate Docker image tags
+      id: meta
+      uses: docker/metadata-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        images: woods245/ceg3120proj4
+        tags: |
+          latest
+          ${{ github.ref }}
+          ${{ env.VERSION }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
         context: .
         push: true
-        tags: woods245/ceg3120proj4:tag
+        tags: ${{ steps.meta.outputs.tags }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
