--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -23,11 +23,12 @@ jobs:
           ${{ github.ref }}
           ${{ env.VERSION }}
 
-- name: Build and push Docker image
-  uses: docker/build-push-action@v2
-  with:
-    context: .
-    push: true
-    tags: |
-      woods245/ceg3120proj4:${{ github.ref }}
-      woods245/ceg3120proj4:latest
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
