--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -12,23 +12,21 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Generate Docker image tags
-      id: meta
+      id: docker/metadata
       uses: docker/metadata-action@v3
       with:
-        images: woods245/ceg3120proj4
-        tags: |
-          latest
-          ${{ github.ref }}
-          ${{ env.VERSION }}
+        images: docker.io/woods245/ceg3120proj4:
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
         context: .
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        tags: |
+          ${{ steps.docker/metadata.outputs.tags }}
+          docker.io/woods245/ceg3120proj4::latest
 
