--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,32 +1,32 @@
-name: Build and Push Docker images
-
+name: Docker Build and Publish
 on:
   push:
     tags:
       - '*'
-
 jobs:
-  build-and-push:
+  build-and-publish:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
+    - name: Checkout Repository
       uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-
-    - name: Generate Docker image tags
-      id: docker/metadata
+    - name: Build Docker image
+      run: docker build -t woods245/ceg3120proj4:$GITHUB_REF .
+    - name: Generate Metadata
+      id: metadata
       uses: docker/metadata-action@v3
       with:
-        images: docker.io/woods245/ceg3120proj4
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
+        images: woods245/ceg3120proj4:$GITHUB_REF
         tags: |
-          ${{ steps.docker/metadata.outputs.tags }}
-          docker.io/woods245/ceg3120proj4::latest
+          latest
+          ${{ github.ref }}
+          ${{ github.ref }}-{{ github.sha }}
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Push Docker image
+      run: |
+        docker push woods245/ceg3120proj4:${{ github.ref }}
+        docker push woods245/ceg3120proj4:latest
 
