--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -2,50 +2,45 @@ name: Build and push Docker image
 
 on:
   push:
-    tags:
-      - '*'
+      tags:
+        - "v..*"
+env:
+  DOCKERHUB_REPO: ceg3120proj4
 
 jobs:
-  build-and-push:
+
+  build-push:
+
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout repo to runner
       uses: actions/checkout@v2
-
+      
+    - name: Collecting tag data
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: |
+          woods245/ceg3120proj4
+        tags: |
+          type=semver,pattern={{major}}
+          type=semver,pattern={{major}}.{{minor}}
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
 
-    - name: Build and push Docker image
-      id: docker_build
-      uses: docker/build-push-action@v2
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v4
       with:
         context: .
         push: true
-        tags: |
-          docker.io/woods245/ceg3120proj4:${{ github.ref }}
-          docker.io/woods245/ceg3120proj4:latest
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Generate Docker image metadata
-      uses: docker/metadata-action@v3
-      with:
-        images: docker.io/woods245/ceg3120proj4
-      id: metadata
-
-    - name: Publish Docker image metadata
-      uses: docker/metadata-action@v3
-      with:
-        images: docker.io/woods245/ceg3120proj4
-        metadata: |
-          {
-            "name": "ceg3120proj4",
-            "tags": ${{ steps.metadata.outputs.tags }}
-          }
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        tags: ${{ steps.meta.outputs.tags }} 
+        labels: ${{ steps.meta.outputs.labels }}
 
 
