--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,46 +1,49 @@
-name: Build and push Docker image
+name: Docker Build and Push
 
 on:
   push:
-      tags:
-        - "v..*"
-env:
-  DOCKERHUB_REPO: woods245/ceg3120proj4
-
+    branches: 
+      - main
+    tags:
+      - "v*.*.*"
+  
 jobs:
-
-  build-push:
-
+  build_and_push:
+    name: Build docker image and push to Docker Hub
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repo to runner
-      uses: actions/checkout@v2
-      
-    - name: Collecting tag data
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: |
-          woods245/ceg3120proj4
-        tags: |
-          type=semver,pattern={{major}}
-          type=semver,pattern={{major}}.{{minor}}
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }} 
-        labels: ${{ steps.meta.outputs.labels }}
+      -
+        name: Checkout repo to runner
+        uses: actions/checkout@v3
+      -
+        name: Collecting tag data
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            woods245/ceg3120proj4
+          tags: |
+            type=semver,pattern={{major}}
+            type=semver,pattern={{major}}.{{minor}}
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .   
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
 
